MDEV-23435 Functions do not convert numbers to character_set_results